# stack-stratification

./: .gitignore  README.md  pyproject.toml
docs/: luad_stage_benchmark.md  project_plan.md  research_roadmap.md  trial_relevance.md
results/luad_benchmark_summary/: benchmark_gain_summary.csv  benchmark_summary.csv  benchmark_summary.json  compartment_summary.csv
results/luad_radiology_benchmark/: pca_sample_centroids.csv  radiology_metrics.csv  radiology_metrics.json  stack_sample_centroids.csv
results/luad_radiology_bootstrap/: radiology_bootstrap_metrics.csv  radiology_bootstrap_summary.csv  radiology_bootstrap_summary.json
results/luad_radiology_compartments/: radiology_compartment_metrics.csv  radiology_compartment_metrics.json
results/luad_stage_benchmark_300/: metrics.json  sample_centroids.csv
results/luad_stage_benchmark_quick/: metrics.json  sample_centroids.csv
results/luad_stage_bootstrap/: bootstrap_metric_summary.csv  bootstrap_metric_summary.json  bootstrap_metrics.csv
results/luad_stage_compartments/: cell_compartments.csv  compartment_metrics.csv  compartment_metrics.json  sample_compartment_summary.csv
scripts/: analyze_luad_radiology_compartments.py  analyze_luad_stage_compartments.py  annotate_clusters.py  benchmark_luad_radiology.py  bootstrap_luad_radiology.py  bootstrap_luad_stage_signal.py  compare_luad_stage_representations.py  generate_stack_embeddings.py  launch_stage_benchmark.sh  prep_luad_data.py  run_luad_stage_benchmark.py  run_stratification.py  status_stage_benchmark.sh  summarize_luad_benchmarks.py
(+11 files in other folders)
